--- a/po/template.pot
+++ b/po/template.pot
@@ -312,13 +312,13 @@ msgstr ""
 msgid "User details"
 msgstr ""
 
-msgid "Suomi.fi Reference Data"
+msgid "Reference Data"
 msgstr ""
 
-msgid "Suomi.fi Terminologies"
+msgid "Terminologies"
 msgstr ""
 
-msgid "Suomi.fi Data Vocabularies"
+msgid "Data Vocabularies"
 msgstr ""
 
 msgid "User right management"
