--- a/po/sv.po
+++ b/po/sv.po
@@ -332,10 +332,10 @@ msgstr "Användaruppgifter"
 msgid "Reference Data"
 msgstr "Kodlistor"
 
-msgid "Terminologies"
+msgid "Terminology"
 msgstr "Ordlistor"
 
-msgid "Data Vocabularies"
+msgid "Data models"
 msgstr "Informationsmodeller"
 
 msgid "User right management"
