--- a/po/en.po
+++ b/po/en.po
@@ -301,12 +301,9 @@ msgid "comment rounds"
 msgstr ""
 
 msgid "Frontpage long description"
-msgstr ""
-"In Interoperabilityplatform’s Comment Round Tool users can create comment rounds for "
-"Terminologies-, Reference Data- and Data Vocabulary- Tool content. In addition, the "
-"Comment Round Tool is used for commenting information content added for commenting "
-"in a comment round, and read comments sent by others. Login is required to use the "
-"service."
+msgstr "In Comment tool users can create comment rounds for Terminology, Reference Data and Data models Tool content. "
+"In addition, the Comment Round Tool is used for commenting information content added for commenting in a comment round, and read comments sent by others. "
+"Login is required to use the service."
 
 msgid "Add new comment round"
 msgstr ""
